# docs/swagger.json
@@ -51,6 +51,11 @@
         },
         "/bloomfilter/apply": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "apply bloomfilter memory",
                 "consumes": [
                     "application/json"
@@ -83,6 +88,45 @@
                         "description": "code\":4000,\"data\":null,\"message\":\"\"}",
                         "schema": {
                             "$ref": "#/definitions/handler.ApplyRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/bloomfilter/del/{uuid}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete key",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Slave"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "key(uuid)",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "boolean"
                         }
                     }
                 }
@@ -162,6 +206,45 @@
                     }
                 }
             }
+        },
+        "/bloomfilter/{address}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "backup address",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Slave"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "address(ip:port)",
+                        "name": "address",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -182,6 +265,9 @@
         "app.ApplyRequest": {
             "type": "object",
             "properties": {
+                "expiration": {
+                    "type": "string"
+                },
                 "size": {
                     "type": "integer"
                 }
@@ -197,6 +283,13 @@
                     "type": "boolean"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
