# internal/router/sqldata/host_healthy.go
@@ -1,6 +1,8 @@
 package sqldata
 
 import (
+	"time"
+
 	"github.com/jinzhu/gorm"
 )
 
@@ -22,6 +24,31 @@ type (
 		Password string `json:"password"`
 		ImageSrc string `json:"img_src" gorm:"column:img_src"`
 	}
+	// ApplyRecord .
+	ApplyRecord struct {
+		*gorm.Model
+		UUID         string    `json:"uuid" gorm:"column:uuid"`
+		HostIP       string    `json:"address"`
+		ForecastCap  uint64    `json:"forecast_cap"`
+		Status       string    `json:"status"`
+		ExpirationAt time.Time `json:"expirarion_time"`
+		ErrorRate    float64   `json:"error_rate" gorm:"default:0"`
+	}
+	// Page .
+	Page struct {
+		CurrentPage int `json:"current_page"`
+		TotalPage   int `json:"total_page"`
+		CurrentSize int `json:"current_size"`
+		TotalSize   int `json:"total_size"`
+	}
+)
+
+//
+const (
+	StatusNormal                 = "normal"
+	StatusTemporarilyUnavailable = "unavailable"
+	StatusDead                   = "dead"
+	StatusRelease                = "release"
 )
 
 // TableName .
